# VoxelRaytracer

./: .gitignore  Cargo.toml
src/: main.rs  vox.rs  voxel.frag  voxel.vert
