[package]
name = "voxel-raytracer"
version = "0.1.0"
edition = "2018"
authors = [
  "Rory Soiffer",
  "Sarah Marshall <sarah@sarahmarshall.name>",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.3.0"
dot_vox = "4.1.0"
ndarray = "0.14.0"
